--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,7 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - name: List files in the repository
+        run: |
+          pwd
       - run: echo "🍏 This job's status is ${{ job.status }}."
