--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,32 @@
-name: "Deploy to Deta"
-description: "Simple GitHub Action to deploy current repo to a Deta Micro"
-
-inputs:
-  deta-access-token:
-    description: "Deta access token"
-    required: true
-  deta-name:
-    description: "Deta micro name"
-    required: true
-  deta-project:
-    description: "Deta project name"
-    default: "default"
-  deta-project-dir:
-    description: "Directory of the project"
-    default: "."
-
-runs:
-  using: "composite"
-  steps:
-    # Install Deta CLI as per docs
-    # https://docs.deta.sh/docs/cli/install
-    - name: Install Deta CLI
-      shell: bash
-      run: |
-        curl -fsSL https://get.deta.dev/cli.sh | sh
-
-    # Using the access token and existing Deta micro and project,
-    # clone the micro and copy .deta metadata folder to use it in deploy
-    # https://docs.deta.sh/docs/cli/commands#deta-clone
-    - name: Clone Deta Metadata
-      shell: bash
-      run: |
-        export DETA_ACCESS_TOKEN=${{ inputs.deta-access-token }}
-        cd ${{ inputs.deta-project-dir }}
-        ~/.deta/bin/deta clone --name ${{ inputs.deta-name }} --project ${{ inputs.deta-project }} tmp/
-        cp -r tmp/.deta .
-
-    # Using the access token, deploy the project to Deta
-    # https://docs.deta.sh/docs/cli/commands#deta-deploy
-    - name: Deploy to Deta
-      shell: bash
-      run: |
-        export DETA_ACCESS_TOKEN=${{ inputs.deta-access-token }}
-        cd ${{ inputs.deta-project-dir }}
-        ~/.deta/bin/deta deploy
-
-branding:
-  icon: check-circle
-  color: purple
+name: "Deta create project"
+on: [push]
+ 
+jobs:
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+      # Install Deta CLI as per docs
+      # https://docs.deta.sh/docs/cli/install
+      - name: Install Deta CLI
+        shell: bash
+        run: |
+          curl -fsSL https://get.deta.dev/cli.sh | sh
+      # Using the access token and existing Deta micro and project,
+      # clone the micro and copy .deta metadata folder to use it in deploy
+      # https://docs.deta.sh/docs/cli/commands#deta-clone
+      - name: create a micro
+        shell: bash
+        run: |
+          export DETA_ACCESS_TOKEN=${{ secrets.DETA_TOKEN }}
+          ~/.deta/bin/deta new --node --name githubdetas --project default tmp/
+          cp -r tmp/.deta .
+      # Using the access token, deploy the project to Deta
+      # https://docs.deta.sh/docs/cli/commands#deta-deploy
+      # - name: Deploy to Deta
+      #   shell: bash
+      #   run: |
+      #     export DETA_ACCESS_TOKEN=${{ inputs.deta-access-token }}
+      #     cd ${{ inputs.deta-project-dir }}
+      #     ~/.deta/bin/deta deploy
